Bug 1561273 - network ID: ipv4NetworkId/scanArp returns gateway IP instead of its MAC, r=kershaw

This patch fixes a bug in ipv4NetworkId where we wrongly hashed IP address instead of MAC address. It also simplifies getMac function. MAC address must be 6 bytes long. If it's not it's probably an error and we must not use it.

Differential Revision: https://phabricator.services.mozilla.com/D39349